fixes to header and logo on mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,7 @@
 
 
 
-.App-header-image {
-  background: linear-gradient(10deg, rgba(255, 255, 255, 0.34), rgba(255, 255, 255, 0.51) 100%), url("./img/IMG_3853.jpeg"); 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 100vh;
-}
+
 .App-link {
   color: #61dafb;
 }
@@ -75,18 +69,9 @@ section{
   padding-bottom: 100px;
 }
 .button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
+ 
+  display: block;
+
 }
 .button2 {
   background-color: #ffffff2b; 
@@ -131,4 +116,49 @@ section{
   to {
     transform: rotate(360deg);
   }
+}
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media  (min-width: 1024px) and (max-width: 1881px) {
+  
+  .App-header-image {
+    background: linear-gradient(10deg, rgba(255, 255, 255, 0.34), rgba(255, 255, 255, 0.51) 100%), url("./img/IMG_3853.jpeg"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+  }
+  
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  
+  .App-header-image {
+    background: linear-gradient(10deg, rgba(255, 255, 255, 0.34), rgba(255, 255, 255, 0.51) 100%), url("./img/mobileBackground.png"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+  }
+  
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  
+  .App-header-image {
+    background: linear-gradient(10deg, rgba(255, 255, 255, 0.34), rgba(255, 255, 255, 0.51) 100%), url("./img/mobileBackground.png"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+  }
+  
 }
